--- a/blocks/add-card-form/_one-field-preloader.scss
+++ b/blocks/add-card-form/_one-field-preloader.scss
@@ -1,7 +1,7 @@
 .one-field-preloader {
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #1b1c24;
   border-radius: 25px;
   display: flex;
   justify-content: center;
@@ -28,21 +28,21 @@
 
 .ldio-l70we991ur div { position: absolute; width: 15px }.ldio-l70we991ur div:nth-child(1) {
   left: 17.5px;
-  background: #001afe;
+  background: #a82d56;
   animation: ldio-l70we991ur-1 0.6097560975609756s cubic-bezier(0,0.5,0.5,1) infinite;
   animation-delay: -0.12195121951219512s
 }
 
 .ldio-l70we991ur div:nth-child(2) {
   left: 42.5px;
-  background: #2196f3;
+  background: #db83d1;
   animation: ldio-l70we991ur-2 0.6097560975609756s cubic-bezier(0,0.5,0.5,1) infinite;
   animation-delay: -0.06097560975609756s
 }
 
 .ldio-l70we991ur div:nth-child(3) {
   left: 67.5px;
-  background: #00fcef;
+  background: #e6bde9;
   animation: ldio-l70we991ur-3 0.6097560975609756s cubic-bezier(0,0.5,0.5,1) infinite;
   animation-delay: undefineds
 }
@@ -52,7 +52,7 @@
   height: 30px;
   display: inline-block;
   overflow: hidden;
-  background: #ffffff;
+  background: #1b1c24;
 }
 
 .ldio-l70we991ur {
