--- a/blocks/single-card/_single-card-preloader.scss
+++ b/blocks/single-card/_single-card-preloader.scss
@@ -1,7 +1,7 @@
 .single-card-preloader {
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  background-color: #1b1c24;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,19 +24,19 @@
 }
 .ldio-nxtxow40e7 div { position: absolute; width: 15px }.ldio-nxtxow40e7 div:nth-child(1) {
   left: 17.5px;
-  background: #001afe;
+  background: #a82d56;
   animation: ldio-nxtxow40e7-1 0.6666666666666666s cubic-bezier(0,0.5,0.5,1) infinite;
   animation-delay: -0.13333333333333333s
 }
 .ldio-nxtxow40e7 div:nth-child(2) {
   left: 42.5px;
-  background: #2196f3;
+  background: #db83d1;
   animation: ldio-nxtxow40e7-2 0.6666666666666666s cubic-bezier(0,0.5,0.5,1) infinite;
   animation-delay: -0.06666666666666667s
 }
 .ldio-nxtxow40e7 div:nth-child(3) {
   left: 67.5px;
-  background: #00fcef;
+  background: #e6bde9;
   animation: ldio-nxtxow40e7-3 0.6666666666666666s cubic-bezier(0,0.5,0.5,1) infinite;
   animation-delay: undefineds
 }
@@ -46,7 +46,7 @@
   height: 100px;
   display: inline-block;
   overflow: hidden;
-  background: #ffffff;
+  background: #1b1c24;
 }
 .ldio-nxtxow40e7 {
   width: 100%;
