--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -27,36 +27,23 @@
   align-items: center;
 
 	&--slide-intro {
-    @include linear-gradient(
-      0deg, 
-      rgba(0,255,239,1) 0%, 
-      rgba(0,18,255,1) 100%);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-image: url(/src/img/background-picture.webp);
+    background-repeat: repeat;
+    background-size: auto;
 	}
 
   &--slide-cards {
     height: auto;
-    @include linear-gradient(
-      180deg,
-      rgba(0,255,239,1) 0%,
-      rgba(0,18,255,1) 100%);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-image: url(/src/img/background-picture.webp);
+    background-repeat: repeat;
+    background-size: auto;
   }
 
   &--slide-filter {
     flex-direction: column;
-    @include linear-gradient(
-      45deg,
-      #db83d1 0%,
-      #e6bde9 100%);
-    color: $white;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-image: url(/src/img/background-picture.webp);
+    background-repeat: repeat;
+    background-size: auto;
   }
 
   &__inner {
