--- a/src/index.css
+++ b/src/index.css
@@ -484,11 +484,11 @@
   width: 48px;
   height: 48px;
   border-radius: 25px;
-  background-image: -webkit-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
-  background-image: -moz-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
-  background-image: -ms-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
-  background-image: -o-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
-  background-image: linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -webkit-linear-gradient(45deg, #a82d56 0%, #db83d1 50%, #e6bde9 100%);
+  background-image: -moz-linear-gradient(45deg, #a82d56 0%, #db83d1 50%, #e6bde9 100%);
+  background-image: -ms-linear-gradient(45deg, #a82d56 0%, #db83d1 50%, #e6bde9 100%);
+  background-image: -o-linear-gradient(45deg, #a82d56 0%, #db83d1 50%, #e6bde9 100%);
+  background-image: linear-gradient(45deg, #a82d56 0%, #db83d1 50%, #e6bde9 100%);
   color: #ffffff;
   z-index: 1000;
   position: fixed;
