fix: change colors of main theme for fields and filters

--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -1,5 +1,5 @@
-$white: #ffffff;
-$black: #000000;
+$white: #332F35;
+$black: #ffffff;
 
 $smartphone-min-width: 320px;
 $smartphone-max-width: 479px;
