--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -41,9 +41,10 @@
 
   &--slide-filter {
     flex-direction: column;
-    background-image: url(/src/img/background-picture.webp);
-    background-repeat: repeat;
-    background-size: auto;
+    // background-image: url(/src/img/background-picture.webp);
+    // background-repeat: repeat;
+    // background-size: auto;
+    background-color: #1b1c24;
   }
 
   &__inner {
@@ -98,6 +99,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
+    background-color: $white;
     margin-bottom: 10px;
     padding: 10px 20px;
   }
@@ -113,23 +115,6 @@
     }
   }
 
-  &__date-wrapper {
-    width: 100%;
-    gap: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    position: relative;
-  }
-
-  &__date-input-wrapper {
-    width: 100%;
-    height: 100%;
-    @include min-width-and-height(220px, 40px);
-    @include max-width-and-height(100%, 60px);
-    position: relative;
-  }
-
   &__date-input {
     width: 100%;
     height: 10%;
@@ -140,22 +125,8 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: rgba($black, $half-opacity);
-    padding: 10px 20px;
-  }
-
-  &__date-input-cover {
-    width: 20%;
-    height: 90%;
-    @include min-width-and-height(40px, 35px);
-    @include max-width-and-height(30%, 50px);
-    border: none;
-    border-radius: 25px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 5%;
     background-color: $white;
-    pointer-events: none;
+    padding: 10px 20px;
   }
 
   &__reset-date-button {
@@ -168,6 +139,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
+    background-color: $white;
     cursor: pointer;
   }
 
@@ -182,6 +154,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
+    background-color: $white;
     cursor: pointer;
   }
 
