--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -31,6 +31,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
+    background-color: $white;
     margin-bottom: 10px;
     padding: 10px 20px;
   }
@@ -46,6 +47,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 1em;
     color: $black;
+    background-color: $white;
     margin-bottom: 10px;
     padding: 20px 20px;
     resize: none;
@@ -68,6 +70,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: rgba($black, $half-opacity);
+    background-color: $white;
     border: none;
     border-radius: 25px;
     padding: 10px 20px;
@@ -82,6 +85,7 @@
   &__select-item {
     width: 100%;
     height: 100%;
+    background-color: $white;
   }
 
   &__submit-button {
@@ -95,6 +99,7 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
+    background-color: $white;
     cursor: pointer;
   }
 }
