--- a/blocks/add-card-form/_one-field-preloader.scss
+++ b/blocks/add-card-form/_one-field-preloader.scss
@@ -1,7 +1,7 @@
 .one-field-preloader {
   width: 100%;
   height: 100%;
-  background-color: #1b1c24;
+  background-color: #332F35;
   border-radius: 25px;
   display: flex;
   justify-content: center;
@@ -52,7 +52,7 @@
   height: 30px;
   display: inline-block;
   overflow: hidden;
-  background: #1b1c24;
+  background: #332F35;
 }
 
 .ldio-l70we991ur {
