--- a/blocks/single-card/_single-card-preloader.scss
+++ b/blocks/single-card/_single-card-preloader.scss
@@ -1,7 +1,7 @@
 .single-card-preloader {
   width: 100%;
   height: 100%;
-  background-color: #1b1c24;
+  background-color: #332F35;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +46,7 @@
   height: 100px;
   display: inline-block;
   overflow: hidden;
-  background: #1b1c24;
+  background: #332F35;
 }
 .ldio-nxtxow40e7 {
   width: 100%;
