--- a/src/index.css
+++ b/src/index.css
@@ -644,10 +644,11 @@
 .slide__title {
   font-family: "Share Tech Mono", "JetBrains Mono", monospace;
   font-weight: 400;
-  font-size: 4rem;
+  font-size: 1rem;
   line-height: 1em;
   color: #332F35;
   word-spacing: -10px;
+  visibility: hidden;
 }
 .filter__search {
   display: block;
@@ -668,23 +669,6 @@
   margin-bottom: 10px;
   padding: 10px 20px;
 }
-.filter__date-wrapper {
-  width: 100%;
-  gap: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  position: relative;
-}
-.filter__date-input-wrapper {
-  width: 100%;
-  height: 100%;
-  min-width: 220px;
-  min-height: 40px;
-  max-width: 100%;
-  max-height: 60px;
-  position: relative;
-}
 .filter__date-input {
   width: 100%;
   height: 10%;
@@ -701,22 +685,6 @@
   color: rgba(255, 255, 255, 0.5);
   background-color: #332F35;
   padding: 10px 20px;
-}
-.filter__date-input-cover {
-  width: 20%;
-  height: 90%;
-  min-width: 40px;
-  min-height: 35px;
-  max-width: 30%;
-  max-height: 50px;
-  border: none;
-  border-radius: 25px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 5%;
-  background-color: #332F35;
-  pointer-events: none;
 }
 .filter__reset-date-button {
   width: 50%;
