--- a/src/index.css
+++ b/src/index.css
@@ -588,6 +588,9 @@
 .container--slide-filter {
   height: 100vh;
 }
+.container--footer {
+  height: 50vh;
+}
 
 .slide {
   width: 100%;
@@ -608,6 +611,8 @@
   background-image: url(/src/img/background-picture-2.webp);
   background-repeat: repeat;
   background-size: auto;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .slide--slide-filter {
   flex-direction: column;
@@ -755,6 +760,10 @@
   display: none;
   visibility: hidden;
   overflow: hidden;
+}
+
+.section-title-picture {
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
