--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -15,6 +15,10 @@
   &--slide-filter {
     height: 100vh;
   }
+
+  &--footer {
+    height: 50vh;
+  }
 }
 
 .slide {
@@ -37,6 +41,8 @@
     background-image: url(/src/img/background-picture-2.webp);
     background-repeat: repeat;
     background-size: auto;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   &--slide-filter {
@@ -191,4 +197,8 @@
   display: none;
   visibility: hidden;
   overflow: hidden;
+}
+
+.section-title-picture {
+  margin-top: 20px;
 }
