--- a/src/index.css
+++ b/src/index.css
@@ -590,6 +590,9 @@
 }
 .container--footer {
   height: 50vh;
+  background-image: url(/src/img/background-picture-2.webp);
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 .slide {
@@ -600,6 +603,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
 }
 .slide--slide-intro {
   background-image: url(/src/img/background-picture-2.webp);
@@ -617,6 +621,10 @@
 .slide--slide-filter {
   flex-direction: column;
   background-color: #1b1c24;
+}
+.slide--slide-footer {
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .slide__inner {
   width: 100%;
@@ -644,6 +652,13 @@
   min-height: 360px;
   max-width: 60vw;
   max-height: 80vh;
+  padding: 20px;
+}
+.slide__inner--slide-footer {
+  min-width: 320px;
+  min-height: 50vh;
+  max-width: 60vw;
+  max-height: 50vh;
   padding: 20px;
 }
 .slide__title {
@@ -760,10 +775,6 @@
   display: none;
   visibility: hidden;
   overflow: hidden;
-}
-
-.section-title-picture {
-  margin-top: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
