--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -18,6 +18,9 @@
 
   &--footer {
     height: 50vh;
+    background-image: url(/src/img/background-picture-2.webp);
+    background-repeat: repeat;
+    background-size: auto;
   }
 }
 
@@ -29,6 +32,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
 
 	&--slide-intro {
     background-image: url(/src/img/background-picture-2.webp);
@@ -47,10 +51,12 @@
 
   &--slide-filter {
     flex-direction: column;
-    // background-image: url(/src/img/background-picture.webp);
-    // background-repeat: repeat;
-    // background-size: auto;
     background-color: #1b1c24;
+  }
+
+  &--slide-footer {
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   &__inner {
@@ -76,6 +82,12 @@
     &--slide-filter {
       @include min-width-and-height(320px, 360px);
       @include max-width-and-height(60vw, 80vh);
+      padding: 20px;
+    }
+
+    &--slide-footer {
+      @include min-width-and-height(320px, 50vh);
+      @include max-width-and-height(60vw, 50vh);
       padding: 20px;
     }
   }
@@ -197,8 +209,4 @@
   display: none;
   visibility: hidden;
   overflow: hidden;
-}
-
-.section-title-picture {
-  margin-top: 20px;
 }
