--- a/src/index.css
+++ b/src/index.css
@@ -821,4 +821,19 @@
   overflow: hidden;
 }
 
+.empty-card-holder {
+  width: 100%;
+  height: 100%;
+  min-width: 280px;
+  min-height: 450px;
+  max-width: 60vw;
+  max-height: 640px;
+  background-color: transparent;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  margin: 10px 20px;
+  z-index: 10;
+}
+
 /*# sourceMappingURL=index.css.map */
