--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -257,3 +257,16 @@
   visibility: hidden;
   overflow: hidden;
 }
+
+.empty-card-holder {
+  width: 100%;
+  height: 100%;
+  @include min-width-and-height(280px, 450px);
+  @include max-width-and-height(60vw, 640px);
+  background-color: transparent;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  margin: 10px 20px;
+  z-index: $top-layer;
+}
