--- a/blocks/single-card/_single-card.scss
+++ b/blocks/single-card/_single-card.scss
@@ -1,23 +1,19 @@
 @import "./single-card-preloader";
 
 .single-card-holder {
-  width: 100%;
-  height: 100%;
-  @include min-width-and-height(280px, 450px);
-  @include max-width-and-height(60vw, 640px);
+  width: 300px;
+  height: 450px;
   background-color: $white;
   border-radius: 25px;
   display: flex;
   align-items: center;
-  margin: 10px 20px;
+  margin: 10px 10px;
   z-index: $top-layer;
 }
 
 .single-card {
-  width: 100%;
-  height: 100%;
-  @include min-width-and-height(280px, 450px);
-  @include max-width-and-height(100vw, 100vh);
+  width: 300px;
+  height: 450px;
   @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
   line-height: 1.5em;
   color: $black;
@@ -35,7 +31,7 @@
 
   &__header-line {
     width: 100%;
-    height: 100%;
+    height: auto;
     min-height: 20px;
     position: relative;
   }
