--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@
 .form-holder {
   width: 100%;
   height: 100%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 320px;
   max-width: 100%;
   max-height: 640px;
@@ -136,9 +136,9 @@
 .add-card-form {
   width: 100%;
   height: 100%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 320px;
-  max-width: 560px;
+  max-width: 300px;
   max-height: 640px;
   display: flex;
   flex-direction: column;
@@ -149,10 +149,10 @@
   display: block;
   width: 100%;
   height: 10%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 40px;
   max-width: 100%;
-  max-height: 60px;
+  max-height: 40px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -168,10 +168,10 @@
   display: block;
   width: 100%;
   height: 30%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 120px;
   max-width: 100%;
-  max-height: 180px;
+  max-height: 120px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -187,20 +187,20 @@
 .add-card-form__select-holder {
   width: 100%;
   height: 1%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 40px;
   max-width: 100%;
-  max-height: 60px;
+  max-height: 40px;
   margin-bottom: 10px;
   background: transparent;
 }
 .add-card-form__select-field {
   width: 100%;
   height: 1%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 40px;
   max-width: 100%;
-  max-height: 60px;
+  max-height: 40px;
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
@@ -220,10 +220,10 @@
   display: block;
   width: 100%;
   height: 10%;
-  min-width: 280px;
+  min-width: 300px;
   min-height: 40px;
   max-width: 100%;
-  max-height: 60px;
+  max-height: 40px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -343,27 +343,19 @@
 }
 
 .single-card-holder {
-  width: 100%;
-  height: 100%;
-  min-width: 280px;
-  min-height: 450px;
-  max-width: 60vw;
-  max-height: 640px;
+  width: 300px;
+  height: 450px;
   background-color: #332F35;
   border-radius: 25px;
   display: flex;
   align-items: center;
-  margin: 10px 20px;
+  margin: 10px 10px;
   z-index: 10;
 }
 
 .single-card {
-  width: 100%;
-  height: 100%;
-  min-width: 280px;
-  min-height: 450px;
-  max-width: 100vw;
-  max-height: 100vh;
+  width: 300px;
+  height: 450px;
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
@@ -382,7 +374,7 @@
 }
 .single-card__header-line {
   width: 100%;
-  height: 100%;
+  height: auto;
   min-height: 20px;
   position: relative;
 }
@@ -586,10 +578,10 @@
   height: auto;
 }
 .container--slide-filter {
-  height: 100vh;
+  height: auto;
 }
 .container--footer {
-  height: 50vh;
+  height: auto;
   background-image: url(/src/img/background-picture-2.webp);
   background-repeat: repeat;
   background-size: auto;
@@ -603,7 +595,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
 }
 .slide--slide-intro {
   background-image: url(/src/img/background-picture-2.webp);
@@ -617,15 +608,21 @@
   background-size: auto;
   flex-direction: column;
   justify-content: flex-start;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .slide--slide-filter {
+  height: auto;
   flex-direction: column;
   background-color: #1b1c24;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .slide--slide-footer {
   flex-direction: column;
   justify-content: flex-start;
   background-color: #1b1c24;
+  padding-top: 30px;
 }
 .slide__inner {
   width: 100%;
@@ -641,27 +638,30 @@
   min-height: 360px;
   max-width: 60vw;
   max-height: 80vh;
-  padding: 20px;
 }
 .slide__inner--slide-cards {
+  width: 100%;
+  height: auto;
   padding: 10px 0;
   min-width: 320px;
   min-height: 470px;
+  max-width: 1300px;
+  max-height: auto;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .slide__inner--slide-filter {
   min-width: 320px;
   min-height: 360px;
   max-width: 60vw;
   max-height: 80vh;
-  padding: 20px;
 }
 .slide__inner--slide-footer {
-  min-width: 280px;
-  min-height: auto;
-  max-width: 60vw;
-  max-height: 50vh;
-  padding: 20px;
+  height: 200px;
+  width: 280px;
   justify-content: space-around;
+  margin-bottom: 30px;
 }
 .slide__title {
   font-family: "Share Tech Mono", "JetBrains Mono", monospace;
@@ -673,11 +673,9 @@
   visibility: hidden;
 }
 .filter__holder {
-  width: 100%;
+  width: 300px;
   height: 100%;
-  min-width: 280px;
   min-height: 320px;
-  max-width: 100%;
   max-height: 640px;
   display: flex;
   flex-direction: column;
@@ -686,12 +684,8 @@
 }
 .filter__search {
   display: block;
-  width: 100%;
-  height: 1%;
-  min-width: 280px;
-  min-height: 40px;
-  max-width: 100%;
-  max-height: 60px;
+  width: 300px;
+  height: 40px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -704,21 +698,21 @@
   padding: 10px 20px;
 }
 .filter__select-holder {
-  width: 100%;
-  height: 1%;
-  min-width: 280px;
-  min-height: 40px;
-  max-width: 100%;
-  max-height: 60px;
+  width: 300px;
+  height: 40px;
   margin-bottom: 15px;
   background: transparent;
 }
 .filter__checkbox-wrapper {
-  width: 100%;
-  height: auto;
+  width: 300px;
+  height: 40px;
+  border-radius: 25px;
   display: flex;
   justify-content: space-around;
   margin-bottom: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  display: flex;
+  align-items: center;
 }
 .filter__single-input-wrapper {
   height: 20px;
@@ -768,24 +762,19 @@
   vertical-align: middle;
 }
 .filter__date-wrapper {
-  width: 100%;
-  height: 1%;
-  min-width: 280px;
-  min-height: 40px;
-  max-width: 100%;
-  max-height: 60px;
+  width: 300px;
+  height: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
+  border-radius: 25px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 .filter__date-input {
-  width: 100%;
-  height: 10%;
+  flex-grow: 1;
   min-width: 220px;
-  min-height: 40px;
-  max-width: 100%;
-  max-height: 60px;
+  height: 40px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -801,12 +790,8 @@
   width: 20px;
 }
 .filter__reset-date-button {
-  width: 10vmin;
-  height: 10vmin;
-  min-width: 40px;
-  min-height: 40px;
-  max-width: 60px;
-  max-height: 60px;
+  width: 40px;
+  height: 40px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -817,14 +802,17 @@
   background-color: #332F35;
   cursor: pointer;
 }
+.filter__controls {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .filter__reset-filter-button {
   display: block;
-  width: 100%;
-  height: 1%;
-  min-width: 280px;
-  min-height: 40px;
-  max-width: 100%;
-  max-height: 60px;
+  width: 300px;
+  height: 40px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -837,12 +825,8 @@
   margin-bottom: 15px;
 }
 .filter__cards-counter {
-  width: 10%;
-  height: 10%;
-  min-width: 200px;
-  min-height: 20px;
-  max-width: 100%;
-  max-height: 30px;
+  width: 200px;
+  height: 20px;
   border: none;
   border-radius: 25px;
   font-family: "JetBrains Mono", monospace;
@@ -867,8 +851,12 @@
   align-items: center;
 }
 
+.section-title-picture {
+  margin-bottom: 20px;
+}
+
 .single-author {
-  width: 100%;
+  width: 280px;
   height: auto;
   background-color: transparent;
   display: flex;
@@ -917,18 +905,72 @@
 }
 
 .empty-card-holder {
-  width: 100%;
-  height: 100%;
-  min-width: 280px;
-  min-height: 450px;
-  max-width: 60vw;
-  max-height: 640px;
+  width: 300px;
+  height: 450px;
   background-color: transparent;
   border-radius: 25px;
   display: flex;
   align-items: center;
   margin: 10px 20px;
   z-index: 10;
+}
+
+@media screen and (min-width: 640px) {
+  .slide__inner--slide-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: auto;
+    width: auto;
+  }
+  .filter__holder {
+    width: 640px;
+    height: 110px;
+    min-height: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .filter__holder {
+    width: 1280px;
+    height: 40px;
+    min-height: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin-bottom: 20px;
+  }
+  .filter__search {
+    min-width: 290px;
+    max-width: 290px;
+    margin-bottom: 0;
+  }
+  .filter__select-holder {
+    min-width: 290px;
+    max-width: 290px;
+    margin-bottom: 0;
+  }
+  .filter__checkbox-wrapper {
+    min-width: 290px;
+    max-width: 290px;
+    margin-bottom: 0;
+  }
+  .filter__date-wrapper {
+    min-width: 290px;
+    max-width: 290px;
+    margin-bottom: 0;
+  }
+  .slide__inner--slide-filter {
+    min-height: 0px;
+    height: auto;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
