--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -13,11 +13,11 @@
   }
 
   &--slide-filter {
-    height: 100vh;
+    height: auto;
   }
 
   &--footer {
-    height: 50vh;
+    height: auto;
     background-image: url(/src/img/background-picture-2.webp);
     background-repeat: repeat;
     background-size: auto;
@@ -32,7 +32,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
 
 	&--slide-intro {
     background-image: url(/src/img/background-picture-2.webp);
@@ -47,22 +46,23 @@
     background-size: auto;
     flex-direction: column;
     justify-content: flex-start;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   &--slide-filter {
+    height: auto;
     flex-direction: column;
     background-color: #1b1c24;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   &--slide-footer {
     flex-direction: column;
     justify-content: flex-start;
     background-color: #1b1c24;
-  }
-
-  &--slide-footer {
-    flex-direction: column;
-    justify-content: flex-start;
+    padding-top: 30px;
   }
 
   &__inner {
@@ -77,25 +77,29 @@
     &--slide-intro {
       @include min-width-and-height(320px, 360px);
       @include max-width-and-height(60vw, 80vh);
-      padding: 20px;
     }
 
     &--slide-cards {
+      width: 100%;
+      height: auto;
       padding: 10px 0;
       @include min-width-and-height(320px, 470px);
+      @include max-width-and-height(1300px, auto);
+      justify-content: center;
+      flex-direction: row;
+      flex-wrap: wrap;
     }
 
     &--slide-filter {
       @include min-width-and-height(320px, 360px);
       @include max-width-and-height(60vw, 80vh);
-      padding: 20px;
     }
 
     &--slide-footer {
-      @include min-width-and-height(280px, auto);
-      @include max-width-and-height(60vw, 50vh);
-      padding: 20px;
-      justify-content: space-around
+      height: 200px;
+      width: 280px;
+      justify-content: space-around;
+      margin-bottom: 30px;
     }
   }
 
@@ -115,10 +119,10 @@
 .filter {
 
   &__holder {
-    width: 100%;
+    width: 300px;
     height: 100%;
-    @include min-width-and-height(280px, 320px);
-    @include max-width-and-height(100%, 640px);
+    min-height: 320px;
+    max-height: 640px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -127,10 +131,8 @@
 
   &__search {
     display: block;
-    width: 100%;
-    height: 1%;
-    @include min-width-and-height(280px, 40px);
-    @include max-width-and-height(100%, 60px);
+    width: 300px;
+    height: 40px;
     border: none;
     border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
@@ -142,20 +144,22 @@
   }
 
   &__select-holder {
-    width: 100%;
-    height: 1%;
-    @include min-width-and-height(280px, 40px);
-    @include max-width-and-height(100%, 60px);
+    width: 300px;
+    height: 40px;
     margin-bottom: 15px;
     background: transparent;
   }
 
   &__checkbox-wrapper {
-    width: 100%;
-    height: auto;
+    width: 300px;
+    height: 40px;
+    border-radius: 25px;
     display: flex;
     justify-content: space-around;
     margin-bottom: 15px;
+    border: 1px solid rgba($black, 0.2);
+    display: flex;
+    align-items: center;
   }
 
   &__single-input-wrapper {
@@ -217,21 +221,20 @@
   }
 
   &__date-wrapper {
-    width: 100%;
-    height: 1%;
-    @include min-width-and-height(280px, 40px);
-    @include max-width-and-height(100%, 60px);
+    width: 300px;
+    height: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
+    border-radius: 25px;
+    border: 1px solid rgba($black, 0.2);
   }
 
   &__date-input {
-    width: 100%;
-    height: 10%;
-    @include min-width-and-height(220px, 40px);
-    @include max-width-and-height(100%, 60px);
+    flex-grow: 1;
+    min-width: 220px;
+    height: 40px;
     border: none;
     border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
@@ -247,10 +250,8 @@
   }
 
   &__reset-date-button {
-    width: 10vmin;
-    height: 10vmin;
-    @include min-width-and-height(40px, 40px);
-    @include max-width-and-height(60px, 60px);
+    width: 40px;
+    height: 40px;
     border: none;
     border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
@@ -260,12 +261,18 @@
     cursor: pointer;
   }
 
+  &__controls {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   &__reset-filter-button {
     display: block;
-    width: 100%;
-    height: 1%;
-    @include min-width-and-height(280px, 40px);
-    @include max-width-and-height(100%, 60px);
+    width: 300px;
+    height: 40px;
     border: none;
     border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
@@ -277,10 +284,8 @@
   }
 
   &__cards-counter {
-    width: 10%;
-    height: 10%;
-    @include min-width-and-height(200px, 20px);
-    @include max-width-and-height(100%, 30px);
+    width: 200px;
+    height: 20px;
     border: none;
     border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.2rem);
@@ -305,8 +310,12 @@
   }
 }
 
+.section-title-picture {
+  margin-bottom: 20px;
+}
+
 .single-author {
-  width: 100%;
+  width: 280px;
   height: auto;
   background-color: transparent;
   display: flex;
@@ -358,10 +367,8 @@
 }
 
 .empty-card-holder {
-  width: 100%;
-  height: 100%;
-  @include min-width-and-height(280px, 450px);
-  @include max-width-and-height(60vw, 640px);
+  width: 300px;
+  height: 450px;
   background-color: transparent;
   border-radius: 25px;
   display: flex;
