--- a/blocks/go-to-button/_go-to-button.scss
+++ b/blocks/go-to-button/_go-to-button.scss
@@ -15,6 +15,8 @@
   right: 10px;
   bottom: 10px;
   transition-duration: 0.4s;
+  opacity: 0.4;
+  cursor: pointer;
 
   &__arrow {
     width: 100%;
@@ -24,5 +26,10 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto;
+    pointer-events: none;
   }
+}
+
+.go-to-top-and-bottom-button:hover {
+  opacity: 1;
 }
