--- a/src/index.css
+++ b/src/index.css
@@ -631,6 +631,10 @@
   background-color: #1b1c24;
   padding-top: 30px;
 }
+.slide__logo-holder {
+  width: auto;
+  height: auto;
+}
 .slide__inner {
   width: 100%;
   height: 100%;
@@ -860,6 +864,9 @@
 
 .section-title-picture {
   margin-bottom: 20px;
+}
+.section-title-picture--main {
+  margin-bottom: 0;
 }
 
 .single-author {
